# alphav

./: .env.example  .gitignore  Cargo.toml  README.md  xt-alpha
examples/: aon_vs_sp500.rs  comprehensive_test.rs  market_summary.rs  test_tools.rs
src/: client.rs  error.rs  execute.rs  lib.rs  request.rs  response.rs  rest.rs  tool_use.rs
src/processor/: decoder.rs  table.rs
src/request/: common.rs  fundamentals.rs  realtime_bulk_quotes.rs  time_series.rs
src/request/fundamentals/: balance_sheet.rs  cash_flow.rs  company_overview.rs  earnings.rs  earnings_estimates.rs  income_statement.rs
src/request/time_series/: daily.rs  intraday.rs  monthly.rs  weekly.rs
src/rest/: decoded.rs  raw.rs  table.rs
src/rest/raw/: fundamentals.rs  quotes.rs  time_series.rs
tests/: dataframe_tests.rs  integration_tests.rs  tool_use_tests.rs
